added some click functionality and learned some very valuable lessons about scope

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     
 
     <script src="script.js"></script>
-    <script src="tilt.jquery.js"></script>
+    <!-- <script src="tilt.jquery.js"></script> -->
 </body>
 </html>
