added more functionality for clicking

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
         Minesweeper
     </header>
 
-    <main>
-        
-    </main>
-    
+    <div class="difficulty">
+            <button id="easy" type="button">Easy</button>
+            <button id="medium" type="medium">Medium</button>
+            <button id="hard" type="hard">Hard</button>
+    </div>
+
+    <div id="gameBoard">
+
+    </div>
 
     <script src="script.js"></script>
     <!-- <script src="tilt.jquery.js"></script> -->
