you can resize board, reset game, and click and mark the right tiles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Minesweeper</title>
 </head>
 <body>
-
+<main>
     <header>
         Minesweeper
     </header>
@@ -23,6 +23,8 @@
     <div id="gameBoard">
 
     </div>
+    <div id="message">You are dead!<button id="reset">Reset?</button></div>
+</main>
 
     <script src="script.js"></script>
     <!-- <script src="tilt.jquery.js"></script> -->
