--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         Minesweeper
     </header>
 
-    <!-- <div class="difficulty">
+    <div class="difficulty">
             <button id="easy" type="button">Easy</button>
             <button id="medium" type="medium">Medium</button>
             <button id="hard" type="hard">Hard</button>
-    </div> -->
+    </div>
 
     <div id="gameBoard">
 
     </div>
-    <div id="message">You are dead!</div>
+    <div id="message">You are dead!<button id="reset" type="reset">Reset</button></div>
 </main>
 
     <script src="script.js"></script>
