--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
             <h2 id="timer"></h2>
             <h1>Flags:</h1>
             <h2 id="flagNum"></h2>
+            <div id="message"></div>
         </div>
 
-
+        <button id="reset" type="reset">Reset</button>
         <div id="gameBoard"></div>
-        <div id="message">You are dead!
-            <button id="reset" type="reset">Reset</button>
-        </div>
     </main>
 
     <script src="script.js"></script>
